# lua-astronomical-almanac

./: CMakeLists.txt  README.md  aa.c  conjunct.c  dms.c
debian/: aa.1  changelog  control  watch
debian/patches/: aa.ans.patch  aa.c.patch  altaz.c.patch  conjunct.c.patch  dms.c.patch  kfiles.c.patch  mar404.c.patch  mer404.c.patch  mlr404.c.patch  moonrise.c.patch  plantbl.h.patch  sat404.c.patch  trnsit.c.patch  ura404.c.patch  ven404.c.patch
lua/: aa_conjunct.lua  aa_moonrise.lua  aa_test.lua  lib_aa.lua
src/: CMakeLists.txt  lua_aa.c
src/aa/: aa.ans  kfiles.c  moonrise.c
src/aa/debian/: rules
src/aa/debian/patches/: aa.que.patch  deltat.c.patch  dms.c-2.patch  ear404.c.patch  gcc10.patch  jup404.c.patch  mlat404.c.patch  nep404.c.patch  plu404.c.patch  rplanet.c.patch  series
